crates/parser/src/snapshots/parser__tests__parse_inline_err@0091_declare_no_second_name.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo, : [Int] -> Int\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0091_declare_no_second_name.ath
---
INFIX_DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  COMMA ","
  WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  FUNC_SORTS
    L_BRACK "["
    IDENT_SORT
      IDENTIFIER
        IDENT "Int"
    R_BRACK "]"
  WHITESPACE " "
  THIN_ARROW "->"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
  WHITESPACE "\n"
error 12: expected function symbol name, or trailing commas are not permitted

