crates/parser/src/snapshots/parser__tests__parse_inline_err@0094_sort_vars_no_name.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : ( ) [] -> Int\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0094_sort_vars_no_name.ath
---
DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
    WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  SORT_VARS_DECL
    L_PAREN "("
    WHITESPACE " "
    R_PAREN ")"
    WHITESPACE " "
  FUNC_SORTS
    L_BRACK "["
    R_BRACK "]"
    WHITESPACE " "
  THIN_ARROW "->"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE "\n"
error 16: expected sort variable name

