crates/parser/src/snapshots/parser__tests__parse_inline_err@0097_conclude_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "conclude\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0097_conclude_no_expr.ath
---
CONCLUDE_DED
  CONCLUDE_KW "conclude"
  WHITESPACE "\n"
error 9: expected expression yielding a sentence in conclude deduction
error 9: expected phrase in conclude deduction

