crates/parser/src/snapshots/parser__tests__parse_inline_err@0098_load_no_string.ath.snap
---
source: crates/parser/src/tests.rs
description: "load\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0098_load_no_string.ath
---
LOAD_DIR
  LOAD_KW "load"
  WHITESPACE "\n"
error 4: expected string literal

