crates/parser/src/snapshots/parser__tests__parse_inline_err@0101_assert_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0101_assert_empty.ath
---
INFIX_ASSERT_DIR
  ASSERT_KW "assert"
  WHITESPACE "\n"
error 6: expected assertion

