crates/parser/src/snapshots/parser__tests__parse_inline_err@0102_assert_closed_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert*\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0102_assert_closed_empty.ath
---
ASSERT_CLOSED_DIR
  ASSERT_STAR_KW "assert*"
  WHITESPACE "\n"
error 7: expected assertion

